#12 solve layout issue by introducing mixins for custom container and text-box

--- a/apps/client/src/app/pages/start/start.component.scss
+++ b/apps/client/src/app/pages/start/start.component.scss
@@ -1,10 +1,5 @@
 @import './../../../styles.scss';
 
-.wrapper {
-  background: rgba(219, 230, 219, 0.8);
-  width: 80%;
-}
-
 button {
   border: none;
   border-radius: 10%;
